
    o	toJava() is a new function equivalent to .r2j but resulting
	in REngine API references (instances of REXPReference).
	By default the references are not resolved since the primary
	use is to pass R functions to Java for callbacks.

    o	set text mode for stdin on Windows (thanks to Brian Ripley)

    o	fix support of NULL arguments in new(J("SomeClass"), ...)

    o	disable AWT tests if NOAWT is set; enable a few more tests


0.8-2	2010-01-22
    o	faster class loader implementation

    o	added support for 64-bit Windows (thanks to Brian Ripley)


0.8-1	2009-10-30
    o	fixed exception handling on Windows: the access to "call"
	was off for Windows builds causing incorrect "call" entries
	in exceptions which broke when encountered in try().

    o	fixed .jcall() which had inadvertently the default for
	use.true.class argument set to TRUE. That is considered
	a bug since it breaks the original behavior and is against the
	idea of .jcall being the low-level interface.


0.8-0	2009-10-27
    o	new exception handling was introduced:

	Java exceptions are mapped to Exception conditions which can
	be used to catch the exception at R level using e.g tryCatch. 
	
	The class name automatically contains "Exception", "error"
	and "condition", as well as all the names (without package path)
	of the classes in the inheritance tree of the actual class of the 
	Exception. This allows targetted handlers:
	tryCatch(.jnew("foo"), NoClassDefFoundError=function(e) ...)

	In addition JNI code now causes an error instead of a warning,
	however, some errors internal to JNI may not have an associated
	Java exception and thus will fire the usual simpleError
	condition.

	As a consequence of the new error handling exception objects
	are now supplied in e$jobj of the handler and .jgetEx()
	becomes obsolete.

    o	added new high-level API using the "J" function. It replaces
	the previously used .J()/.jrnew() and .jrcall().

	New Java objects are created using new(J("class"), ...) and